--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,18 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install CMake
+      - name: Install CMake and Git
         run: |
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
+          choco install git -y
 
-      - name: Install Git
-        run: choco install git -y
+      - name: Install Visual Studio Build Tools
+        run: |
+          choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --includeOptional --passive" -y
+
+      - name: Set up MSVC environment
+        run: |
+          "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
 
       - name: Download Qt Online Installer
         run: |
