--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,16 +22,14 @@ jobs:
         run: |
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
           choco install git -y
-
-      - name: Install Visual Studio Build Tools
-        run: |
-          choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --includeOptional --passive" -y
+          choco install vswhere -y
 
       - name: Set up MSVC environment
         run: |
-          $env:INCLUDE = "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\VC\Tools\MSVC\<version>\include;C:\Program Files (x86)\Windows Kits\10\Include\<sdk_version>\ucrt"
-          $env:LIB = "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\VC\Tools\MSVC\<version>\lib\x64;C:\Program Files (x86)\Windows Kits\10\Lib\<sdk_version>\ucrt\x64"
-          $env:PATH = "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\VC\Tools\MSVC\<version>\bin\Hostx64\x64;$env:PATH"
+          $vsPath = & 'C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe' -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
+          $env:INCLUDE = "$vsPath\VC\Tools\MSVC\<version>\include;$vsPath\VC\Auxiliary\VS\include;$vsPath\VC\Tools\MSVC\<version>\atlmfc\include;$vsPath\VC\Auxiliary\VS\UnitTest\include;$vsPath\VC\Auxiliary\VS\UI\include;C:\Program Files (x86)\Windows Kits\10\Include\<sdk_version>\ucrt;$env:INCLUDE"
+          $env:LIB = "$vsPath\VC\Tools\MSVC\<version>\lib\x64;$vsPath\VC\Auxiliary\VS\lib\x64;$vsPath\VC\Tools\MSVC\<version>\atlmfc\lib\x64;$vsPath\VC\Auxiliary\VS\UI\lib\x64;C:\Program Files (x86)\Windows Kits\10\Lib\<sdk_version>\ucrt\x64;$env:LIB"
+          $env:PATH = "$vsPath\VC\Tools\MSVC\<version>\bin\Hostx64\x64;$vsPath\Common7\Tools;$vsPath\Common7\IDE\VC\VCPackages;$vsPath\VC\Tools\MSVC\<version>\bin\Hostx64\x86;$vsPath\Common7\IDE\CommonExtensions\Microsoft\TestWindow;$vsPath\Team Tools\Performance Tools;C:\Program Files (x86)\Microsoft SDKs\F#\10.1\Framework\v4.7.1;C:\Program Files (x86)\Windows Kits\10\bin\x64;$env:PATH"
 
       - name: Download Qt Online Installer
         run: |
